samples/_failures_safe/1761001987_cde1f2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5a9851d2.c: In function ‘decompress_data’:
./samples/SAFE/__tmp_5a9851d2.c:148:5: error: expected declaration or statement at end of input
  148 |     if (!resize_compression_block(&ctx->input, data_size)) {
      |     ^~
./samples/SAFE/__tmp_5a9851d2.c:148:5: error: expected declaration or statement at end of input
